hostaliases-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostaliases-pod
spec:
  restartPolicy: Never
  hostAliases:
  - ip: "192.168.99.100"
    hostnames:
    - "myminikube.info"
  containers:
  - name: cat-hosts
    image: nginx
    command:
    - cat
    args:
    - "/etc/hosts"
