service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ach2
spec:
  selector:
    app: ach2
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30000
