ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ach2-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/rewrites: >
      serviceName=ach2-service rewrite=/;
spec:
  rules:
  - host: "myminikube.info"
  - http:
      paths:
      - pathType: Prefix
        path: /newValue
        backend:
          service:
            name: ach2-service
            port:
              number: 3000
